5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1575_1559.log
== TEST (2019-03-12 17:44:39) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(.upper(frase))
-- ERROR:
File "XXXX", line 2
    print(.upper(frase))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:01:23) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print("frase .upper()")
-- OUTPUT:
frase .upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:01:36) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print("frase.upper()")
-- OUTPUT:
frase.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:01:50) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print("frase".upper())
-- OUTPUT:
FRASE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:02:34) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(" frase ".upper())
-- OUTPUT:
FRASE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:03:22) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(" frase .upper()")
-- OUTPUT:
frase .upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:03:50) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print("frase".upper())
-- OUTPUT:
FRASE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:04:16) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia"
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:04:32) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia."
print(frase.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 20:04:48) 
-- CODE:
frase = "ada lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.133072
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
